haproxy-ingress-echoserver.yaml
#
#  Author: Hari Sekhon
#  Date: 2023-04-07 22:43:51 +0100 (Fri, 07 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/HariSekhon/Kubernetes-configs
#
#  License: see accompanying Hari Sekhon LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/in/HariSekhon
#

# For testing HAProxy Ingress Controller

# XXX: HAProxy Ingress Controller didn't pick this up for a long time until after:
#
#     kubectl rollout restart deploy haproxy-kubernetes-ingress -n haproxy
#
#     but recreating everything even this didn't help

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-haproxy
  namespace: echo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy  # deprecated, use ingressClassName under spec section for Kubernetes 1.18+

    kubernetes.io/ingress.class: haproxy  # deprecated, use ingressClassName under spec section for Kubernetes 1.18+
    haproxy.org/ingress.class: haproxy
    haproxy.org/load-balance: leastconn  # default: roundrobin

    #haproxy.org/auth-type: basic-auth
    #haproxy.org/auth-secret: haproxy/haproxy-credentials
    #haproxy.org/auth-realm: Admin Area

    haproxy.org/whitelist: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
    #haproxy.org/blacklist: "192.168.1.0/24, 192.168.2.100"

    #haproxy.org/cookie-persistence: mycookie

    haproxy.org/rate-limit-period: 1m
    haproxy.org/rate-limit-requests: "30"
    haproxy.org/rate-limit-size: "1000000"

spec:
  #ingressClassName: haproxy
  tls:
    # XXX: Edit
    - hosts:
        - echo-haproxy.DOMAIN.COM
      # SSL cert auto-generated for this FQDN by Cert Manager ACME integration (see cert-manager.yaml) and saved to this secret name
      secretName: haproxy-echoserver-tls
  rules:
    # XXX: Edit
    - host: echo-haproxy.DOMAIN.COM
      http:
        paths:
          # XXX: Edit
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
